--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addWaterYear)
 export(calcWaterYear)
+export(checkWQPdates)
 export(constructNWISURL)
 export(constructUseURL)
 export(constructWQPURL)
