Fixing ci yaml?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ variables:
   BUILD_LOGS_DIR: "$CI_PROJECT_DIR/ci/logs"
   CONNECT_API_KEY: $CONNECT_API_KEY
   CONNECT_SERVER: $CONNECT_SERVER
+  GITHUB_PAT: $GITHUB_PAT
 
 stages:
   - getready
