--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,6 @@ variables:
   BUILD_LOGS_DIR: "$CI_PROJECT_DIR/ci/logs"
   CONNECT_API_KEY: $CONNECT_API_KEY
   CONNECT_SERVER: $CONNECT_SERVER
-  GITHUB_PAT: $GITHUB_PAT
 
 stages:
   - getready
@@ -24,8 +23,7 @@ getready:
   stage: getready
   script:
     - mkdir -p $R_LIBS_USER
-    - Rscript -e "install.packages(c('devtools','pkgdown', 'kableExtra','covr'))"
-    - Rscript -e "devtools::install_github('rstudio/connectapi')"
+    - Rscript -e "install.packages(c('devtools','pkgdown', 'kableExtra','covr', 'connectapi'))"
     - Rscript -e "devtools::install_deps(dependencies = TRUE, quiet = TRUE)"
   cache:
     paths:
