--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ getready:
   stage: getready
   script:
     - mkdir -p $R_LIBS_USER
-    - Rscript -e "install.packages(c('devtools','pkgdown', 'kableExtra','covr', 'connectapi', 'patchwork'))"
+    - Rscript -e "install.packages(c('devtools','pkgdown', 'kableExtra','covr', 'connectapi', 'patchwork', 'rsconnect'))"
     - Rscript -e "devtools::install_deps(dependencies = TRUE, quiet = TRUE)"
   cache:
     paths:
