--- a/.github/workflows/style-and-lint.yaml
+++ b/.github/workflows/style-and-lint.yaml
@@ -65,7 +65,7 @@ jobs:
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git add R/\*
           git commit -m "Style code" || echo "No changes to commit"
-          git pull --ff-only
+          git pull --ff-only origin main
           git push origin main
   # Next run lintr to annotate the PR with anything caught by the linter that wasn't changed by styler
   lint:
