pkgdown mods and vignette files to rbuildignore

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,8 @@ navbar:
       href: articles/statsServiceMap.html
     - text: NLDI Interface
       href: articles/nldi.html
+    - text: Large Data Pull Example
+      href: articles/wqp_large_pull_targets.html
   right:
   - icon: fa-github fa-lg
     href: https://github.com/USGS-R/dataRetrieval
