--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -51,6 +51,14 @@ README.Rmd
 vignettes/tutorial.Rmd
 vignettes/phosData.rds
 vignettes/waterservices.png
+vignettes/wqp_large_pull_targets.Rmd
+vignettes/full_pipeline.png
+vignettes/pipeline_snap_char_names.png
+vignettes/map_original_grid_cells.png
+vignettes/log_file.png
+vignettes/pipeline_snap_check_inventory.png
+vignettes/map_updated_grid_cells.png
+vignettes/pipeline_snap_update_inventory.png
 .gitlab-ci.yml
 sample_large_pull.R
 deploy_simple.R
