messed up the export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_nldi_sources)
 export(importNGWMN)
 export(importRDB1)
 export(importWQP)
+export(importWaterML1)
 export(importWaterML2)
 export(is_dataRetrieval_user)
 export(pCodeToName)
