--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,11 +2,8 @@
 ^doc$
 .Rhistory
 vignettes/figures
-appveyor.yml
-.travis.yml
 .gitignore
 dataRetrieval.Rproj
-examplePhosQuery.R
 dataRetrieval-concordance.tex
 README.md
 ^.*\.Rproj$
@@ -24,7 +21,6 @@ code.json
 docs
 pkgdown
 _pkgdown.yml
-hexSticker.R
 vignettes/earthquake.Rmd
 vignettes/statsServiceMap.Rmd
 vignettes/usMaps.Rmd
@@ -40,7 +36,6 @@ vignettes/summary_service_cache/*
 vignettes/summary_service_test_cache/*
 man/figures/highrezlogo-01.png
 man/figures/USGS_R.png
-playing_with_post.R
 ^CRAN-RELEASE$
 ^cran-comments\.md$
 ^revdep$
@@ -61,8 +56,29 @@ vignettes/pipeline_snap_check_inventory.png
 vignettes/map_updated_grid_cells.png
 vignettes/pipeline_snap_update_inventory.png
 .gitlab-ci.yml
-sample_large_pull.R
 deploy_simple.R
 .lintr
-WQPUndocumentedServices.R
-data_type_cd.R
+vignettes/back_to_main.png
+vignettes/delete_branch.png
+vignettes/pipeline.png
+vignettes/merge_request.png
+vignettes/create_merge.png
+vignettes/doc_all.png
+vignettes/commit2.png
+vignettes/commit1.png
+vignettes/test.png
+vignettes/check.png
+vignettes/new_branch.png
+vignettes/pull.png
+vignettes/roxygen.png
+vignettes/install.png
+vignettes/git_repository.png
+vignettes/https_clone.png
+vignettes/new_project.png
+vignettes/Contributing.Rmd
+vignettes/no_manual.png
+vignettes/install_error.png
+vignettes/git_login.png
+vignettes/login.png
+vignettes/git_repository.png
+vignettes/https_clone.png
