More how to contribute updates

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -82,3 +82,11 @@ vignettes/git_login.png
 vignettes/login.png
 vignettes/git_repository.png
 vignettes/https_clone.png
+vignettes/test_included.png
+vignettes/troubleshooting.Rmd
+vignettes/pat.png
+vignettes/github_code.png
+vignettes/save_pat.png
+vignettes/more_tests.png
+vignettes/stylesSlides.css
+
