Add gitlab templates

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -32,8 +32,6 @@ vignettes/phWI.rds
 vignettes/az_data.rds
 vignettes/atascadero-creek-nldi.png
 vignettes/ucsb.png
-vignettes/summary_service_cache/*
-vignettes/summary_service_test_cache/*
 man/figures/highrezlogo-01.png
 man/figures/USGS_R.png
 ^CRAN-RELEASE$
@@ -43,6 +41,7 @@ LICENSE.md
 README.Rmd
 ^codecov\.yml$
 ^\.github$
+^\.gitlab$
 vignettes/tutorial.Rmd
 vignettes/phosData.rds
 vignettes/waterservices.png
