--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(importWaterML2)
 export(is_dataRetrieval_user)
 export(pCodeToName)
 export(parameterCdFile)
+export(pcode_to_name)
 export(readNGWMNdata)
 export(readNGWMNlevels)
 export(readNGWMNsites)
