--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -44,7 +44,7 @@ navbar:
       href: articles/Contributing.html
   right:
   - icon: fa-github fa-lg
-    href: https://github.com/USGS-R/dataRetrieval
+    href: https://github.com/DOI-USGS/dataRetrieval
 reference:
   - title: National Water Information System (NWIS)
     desc:  Functions to retrieve (USGS) NWIS data.
@@ -105,6 +105,7 @@ reference:
       - stateCd
       - zeroPad
       - dataRetrieval
+      - pcode_to_name
   - title: Web query utilities
     desc: Functions to create web queries
     contents:
