--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,12 +89,13 @@ deploy:
     
 Validate Inventory:
     stage: end
-    image: ${INTERNAL_REGISTRY}ghsc/hazdev/inventory-validator:latest
+    image: ${INTERNAL_REGISTRY}software/software-management:latest
     script:
-      - validate.sh code.json
-      - software-management publish
+      - software-management review
         --project "${CI_PROJECT_DIR}"
-        --visibility internal
+        --ref "main"
+        --type "Provisional"
+
 
     tags:
         - chs-shared
