is it the branch that's 404ing?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,7 +93,7 @@ Validate Inventory:
     script:
       - software-management review
         --project "${CI_PROJECT_DIR}"
-        --ref "main"
+        --ref "${CI_COMMIT_BRANCH}"
         --type "provisional"
 
 
