--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,9 +92,9 @@ Validate Inventory:
     image: ${INTERNAL_REGISTRY}software/software-management:latest
     script:
       - software-management review
-        --project "water/dataRetrieval"
+        --project "${CI_PROJECT_PATH}"
         --ref "${CI_COMMIT_BRANCH}"
         --type "provisional"
-        --token "$CI_JOB_TOKEN"
+        --token "${CI_JOB_TOKEN}"
     tags:
         - chs-shared
