--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -12,11 +12,11 @@ jobs:
   test-coverage:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@c0a81a463886bb75afe234e07a9fd5bb79219196
 
-      - uses: r-lib/actions/setup-r@v2
+      - uses: r-lib/actions/setup-r@52330cc136b963487918a8867f948ddf954e9e63
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: r-lib/actions/setup-pandoc@52330cc136b963487918a8867f948ddf954e9e63
 
       - name: Query dependencies
         run: |
