--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Build site
         run: |
-          install.packages(c("zoo", "patchwork"))
+          install.packages(c("zoo", "patchwork", "maps"))
           pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE, dest_dir = "public") |
           file.copy(from = "./public/articles/logo.png",to = "./public/reference/logo.png")
         shell: Rscript {0}
