--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Authors@R: c(
     person("David","Watkins", role=c("aut"),
             email = "wwatkins@usgs.gov",
             comment=c(ORCID="0000-0002-7544-0700")),
-    person("David", "Blodgett", role="ctb"),
+    person("David", "Blodgett", role="aut",
+            comment=c(ORCID="0000-0001-9489-1710"),
+            email = "dblodgett@usgs.gov"),
     person("Mike", "Johnson", role=c("aut"),
             email = "mikecp11@gmail.com",
             comment=c(ORCID="0000-0002-5288-8350")),
