--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(constructUseURL)
 export(constructWQPURL)
 export(countyCd)
 export(countyCdLookup)
+export(create_NWIS_bib)
+export(create_WQP_bib)
 export(findNLDI)
 export(getWebServiceData)
 export(get_nldi_sources)
