Don't include the status page on a CRAN release, so that we have total control of the message (otherwise we'd need to resubmit to CRAN each time).

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -89,5 +89,6 @@ vignettes/github_code.png
 vignettes/save_pat.png
 vignettes/more_tests.png
 vignettes/stylesSlides.css
+vignettes/Status.Rmd
 ^ci$
 ^public$
