--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -40,12 +40,14 @@ navbar:
       href: articles/tutorial.html
     - text: Changes to QW
       href: articles/qwdata_changes.html
-    - text: Moving Averages
-      href: articles/movingAverages.html
+    - text: Long to Wide
+      href: articles/long_to_wide.html
     - text: Stat Service
       href: articles/statsServiceMap.html
     - text: NLDI Interface
       href: articles/nldi.html
+    - text: Moving Averages
+      href: articles/movingAverages.html
     - text: How to Contribute
       href: articles/Contributing.html
   right:
