--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,8 @@ getready:
   stage: getready
   script:
     - mkdir -p $R_LIBS_USER
-    - Rscript -e "withr::with_libpaths(new = Sys.getenv('R_LIBS_USER'), install.packages(c('patchwork', 'data.table', 'maps', 'zoo')))"
+    - echo "options(Ncpus=$(nproc --all), repos=c(CRAN='$CRAN'))" >> $R_PROFILE
+    - Rscript -e "withr::with_libpaths(new = Sys.getenv('R_LIBS_USER'), install.packages(c('patchwork', 'maps', 'zoo')))"
     - Rscript -e "withr::with_libpaths(new = Sys.getenv('R_LIBS_USER'), devtools::install_deps(dependencies = TRUE, quiet = TRUE))"
     - Rscript -e "remotes::update_packages()"
     - Rscript -e "withr::with_libpaths(new = Sys.getenv('R_LIBS_USER'), devtools::install(build_vignettes = FALSE, args = '--no-manual', upgrade = 'always', force = TRUE))"
