--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(importWaterML2)
 export(is_dataRetrieval_user)
 export(pCodeToName)
 export(parameterCdFile)
+export(parse_WQP)
 export(pcode_to_name)
 export(readNGWMNdata)
 export(readNGWMNlevels)
