--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update -qq && apt-get -y --no-install-recommends install \
   r-cran-rsconnect \
   r-cran-connectapi \
   r-cran-covr \
+  r-cran-sf \
   && rm -rf /var/lib/apt/lists/*
   
 
