--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ variables:
 
 build-image:
   stage: build
+  cache: []
   image: ${DEVOPS_REGISTRY}usgs/docker:20
   services:
   - name: ${DEVOPS_REGISTRY}usgs/docker:20-dind
@@ -48,9 +49,9 @@ build-image:
         .
     - docker push --all-tags ${CI_REGISTRY_IMAGE}
 
-
 buildcheck:
   stage: check
+  cache: []
   dependencies:
     - build-image
   image: ${CI_REGISTRY_IMAGE}:latest
@@ -61,6 +62,7 @@ buildcheck:
 
 unittests:
   stage: test
+  cache: []
   image: ${CI_REGISTRY_IMAGE}:latest
   dependencies:
     - build-image
@@ -82,6 +84,7 @@ unittests:
         
 pages:
   stage: end
+  cache: []
   image: ${CI_REGISTRY_IMAGE}:latest
   only: 
     - main
