--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,5 +51,5 @@ export(whatWQPdata)
 export(whatWQPmetrics)
 export(whatWQPsamples)
 export(whatWQPsites)
-export(wqp_count_info)
+export(wqp_check_status)
 export(zeroPad)
