--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
     person("David","Lorenz", role=c("aut")),
     person("Jordan", "Read", role = c("ctb")),
     person("Jordan", "Walker", role = c("ctb")),
-    person("Lindsay","Carr", role=c("ctb")),
+    person("Lindsay","Platt", role=c("ctb")),
     person("David","Watkins", role=c("aut"),
             email = "wwatkins@usgs.gov",
             comment=c(ORCID="0000-0002-7544-0700")),
