--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,4 +94,16 @@ pages:
       - $PAGES_OUTDIR
     expire_in: 1 week
     
+Validate Inventory:
+    stage: end
+    image: ${INTERNAL_REGISTRY}software/software-management:latest
+    script:
+      - software-management review
+        --project "${CI_PROJECT_PATH}"
+        --ref "${CI_COMMIT_BRANCH}"
+        --type "provisional"
+        --token "${GIT_TOKEN_CUSTOM}"
+    tags:
+        - chs-shared
+
 
