Getting ready for minor cran update

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,4 @@
+
 ^Meta$
 ^Temp$
 ^doc$
@@ -94,3 +95,5 @@ vignettes/long_to_wide.Rmd
 vignettes/join_by_closest.Rmd
 ^ci$
 ^public$
+^docker$
+vignettes/WQX_3.Rmd
