--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -11,6 +11,8 @@ name: test-coverage
 jobs:
   test-coverage:
     runs-on: macOS-latest
+    env:
+      CUSTOM_DR_UA = GitHub_CI
     steps:
       - uses: actions/checkout@c0a81a463886bb75afe234e07a9fd5bb79219196
 
