--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,7 +40,15 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@52330cc136b963487918a8867f948ddf954e9e63
         with:
-          extra-packages: any::pkgdown, local::.
+          extra-packages: |
+            any::pkgdown
+            any::rcmdcheck
+            any::DT
+            any::data.table
+            any::dplyr
+            any::tidyr
+            any::gridExtra
+            local::.
           needs: website
 
       - name: Build site
